// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard debe de incrementar el contador 1`] = `
<div
  className=" productCard undefined "
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductCard debe demostrar el componente correctamente 1`] = `
<div
  className=" productCard undefined "
>
  <h1>
    Product card
  </h1>
</div>
`;
